testing ffmpeg speed again, implemented encode button